--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+*{
+  margin: 0 auto;
+  padding: 0;
+  font-family: 'Inter', sans-serif;
+font-family: 'Kdam Thmor Pro', sans-serif;
+font-family: 'Lora', serif;
+font-family: 'Merriweather', serif;
+font-family: 'Oxygen', sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.row{
+  background-color: rgba(77, 204, 235, 0.858);
+  height: 50px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+a{
+  text-decoration: none;
+  color: #fff;
+}
+.comand{
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+#twos{
+  height: 610px;
+  background-image: url('./components/navbar/image/165542-ekstremalnyj_vid_sporta-oblako-voda-parashyut-otdyx-3840x2160.jpg'); 
+  background-size: cover; 
+  background-repeat: no-repeat; 
+ /* height: 700px; */
+ width: auto;
+ box-shadow: inset 50px 1000px 100px #0000009d, inset -50px -50px 100px #0000005c;
+ 
+}
+.center{
+  background-color: rgba(77, 204, 235, 0.858);
+  height: 50px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
